# divai

./: .gitignore  AGENTS.md  README.md
backend/: AGENTS.md  data.db  housing_reschedule_with_english.csv  massivs.csv  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/agent/: calculator.py  models.py  pipeline.py  rules.py
backend/app/models/: schemas.py
backend/app/routers/: applicants.py  applications.py  submit.py
backend/resources/: AGENT_GUIDE.md
frontend/: .gitignore  AGENTS.md  package.json
frontend/components/: LangToggle.js  ProtectedRoute.js
frontend/locales/: ar.json  en.json
frontend/pages/: _app.js  _document.js  admin.js  index.js  login.js
frontend/pages/api/auth/: [...nextauth].js
frontend/styles/: dashboard.css
