[project]
name = "divai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
    "fastapi>=0.110.0",
    "uvicorn[standard]",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2.1"
]
[project.scripts]
dev = "uvicorn app.main:app --reload --port 8000"